Add a EmptyTextViews for the DetailFragment
Review and Trailers adapter now can receive a TextView and show it when the list is empty.

DetailFragment has a new variables for empty Textviews

add a new Empty TextViews in detail_fragment_content_recycler_views

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">Popular movies</string>
+
+
     <string name="empty">Empty</string>
+    <string name="empty_trailers">Empty</string>
+    <string name="empty_reviews">Empty</string>
+
     <string name="coudntRecoverMovies">couldn\'t recover the movies</string>
     <string name="retrofitError">Something went wrong, but retrofit did his work</string>
     <string name="somethingWentWrong">Something went wrong</string>
