--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,11 +1,16 @@
 <resources>
-    <string name="empty">Vazio</string>
+
+    <string name="empty">Filmes indisponíveis no momento</string>
+    <string name="empty_trailers">Trailers indisponíveis no momento</string>
+    <string name="empty_reviews">Reviews indisponíveis no momento</string>
+    <string name="notificationText">É o filme mais popular do momento! Dê uma conferida!</string>
+    <string name="network_connected">Conectado a internet</string>
+    <string name="network_disconnected">Sem conexão com a internet</string>
+    <string name="need_browser_warning">Você precisa ter um browser para abrir este link</string>
+
+
     <string name="coudntRecoverMovies">Não foi possível recuperar os filmes</string>
     <string name="noConnectionAvailable">Não há conexões disponiveis</string>
     <string name="trailers_label">Trailers</string>
     <string name="reviews">Reviews</string>
-    <string name="need_browser_warning">Você precisa ter um browser para abrir este link</string>
-    <string name="network_connected">Conectado a internet</string>
-    <string name="network_disconnected">Sem conexão com a internet</string>
-
 </resources>
